--- a/8_Regression_House.ipynb
+++ b/8_Regression_House.ipynb
@@ -605,7 +605,7 @@
         "early_stopping_callback = EarlyStopping(monitor='val_loss', patience=20)\n",
         "\n",
         "# 모델의 이름을 정합니다.\n",
-        "modelpath=\"./Data/model/Ch15-house.hdf5\"\n",
+        "modelpath=\"./Data/model/house.hdf5\"\n",
         "\n",
         "# 최적화 모델을 업데이트하고 저장합니다.\n",
         "checkpointer = ModelCheckpoint(filepath=modelpath, monitor='val_loss', verbose=0, save_best_only=True)\n",
